@@ -1,5 +1,6 @@
 ver 0.24 (not yet released)
 * protocol
+  - new command "searchcount" (case-insensitive "count")
   - "playlistfind"/"playlistsearch" have "sort" and "window" parameters
   - "save" can append to or replace an existing playlist
   - filter "prio" (for "playlistfind"/"playlistsearch")
